--- a/Diagnosis.App/Controls/Common/RadioListBox.xaml
+++ b/Diagnosis.App/Controls/Common/RadioListBox.xaml
@@ -31,6 +31,10 @@
                     Value="true" />
             <EventSetter Event="KeyDown"
                          Handler="ListBoxItem_KeyDown" />
+            <Setter Property="Margin"
+                    Value="{Binding ItemMargin, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBox}}}" />
+            <Setter Property="Padding"
+                    Value="{Binding ItemPadding, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBox}}}" />
 
             <Setter Property="Template">
                 <Setter.Value>
